force-app/main/default/objects/Project_Application_Proposal_Category__c/Project_Application_Proposal_Category__c.object-meta.xml
<CustomObject>
    <label>Project/Application/Proposal Category</label>
    <nameField>
        <label>Proposal Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project/Application/Proposal Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>