force-app/main/default/objects/Project_Application_Proposal_Category__c/fields/Direct_To_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Direct_To_Voucher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that the proposal category is Direct To Voucher and Project Incentive Funding source should be created for this proposal category.</description>
    <inlineHelpText>Flag to indicate that the proposal category is Direct To Voucher and Project Incentive Funding source should be created for this proposal category.</inlineHelpText>
    <label>Direct To Voucher?</label>
    <type>Checkbox</type>
</CustomField>