force-app/main/default/objects/Project_Application_Proposal_Category__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Innovation - Business Support</fullName>
            </value>
            <value>
                <fullName>Innovation - Capacity Assets</fullName>
            </value>
            <value>
                <fullName>Innovation - Demonstration</fullName>
            </value>
            <value>
                <fullName>Innovation - Deployment</fullName>
            </value>
            <value>
                <fullName>Innovation - Information Dissemination</fullName>
            </value>
            <value>
                <fullName>Innovation - Product Development</fullName>
            </value>
            <value>
                <fullName>Innovation - Research Study</fullName>
            </value>
            <value>
                <fullName>Communities &amp; Local Government - Clean Energy Communities Grant Award</fullName>
            </value>
            <value>
                <fullName>Generic Project Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>