force-app/main/default/objects/Project_Application_Proposal_Category__c/fields/Recoupment__c.field-meta.xml
<CustomField>
    <fullName>Recoupment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recoupment</label>
    <type>Checkbox</type>
</CustomField>