force-app/main/default/objects/Project_Application_Proposal_Category__c/fields/Skip_Project_Contract_Creation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Project_Contract_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SF-29467 - Flag to indicate that Project Contract, Project Contract Line and Project Funding record should NOT be created for this proposal category.</description>
    <inlineHelpText>Flag to indicate that Project Contract, Project Contract Line and Project Funding record should NOT be created for this proposal category.</inlineHelpText>
    <label>Skip Project Contract Creation?</label>
    <type>Checkbox</type>
</CustomField>