force-app/main/default/objects/Project_Application_Proposal_Category__c/fields/Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Solicitation__c</fullName>
    <label>Solicitation</label>
    <referenceTo>Grant_Solicitation__c</referenceTo>
    <relationshipLabel>Proposal Categories</relationshipLabel>
    <relationshipName>Proposal_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>